oauth/samples/mirror.yaml
apiVersion: v1
kind: Service
metadata:
  name: mymirror
  labels:
    app: mymirror
    service: mymirror
spec:
  ports:
  - name: http
    port: 8000
    targetPort: 80
  selector:
    app: mymirror
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mymirror
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mymirror
      version: v1
  template:
    metadata:
      labels:
        app: mymirror
        version: v1
    spec:
      serviceAccountName: mymirror
      containers:
      - image: mendhak/http-https-echo
        imagePullPolicy: IfNotPresent
        name: httpbin
        ports:
        - containerPort: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: bookinfo
spec:
  hosts:
  - "*"
  gateways:
  - bookinfo-gateway
  http:
  - match:
    - uri:
        exact: /productpage
    - uri:
        prefix: /static
    - uri:
        exact: /login
    - uri:
        exact: /logout
    - uri:
        prefix: /api/v1/products
    route:
    - destination:
        host: productpage
        port:
          number: 9080
      weight: 100
    mirror:
      host: mymirror
      port:
        number: 8000
    mirrorPercentage:
      value: 100.0
